# ottonate

./: .gitignore  AGENTS.md  PIPELINE.md  README.md  pyproject.toml
agents/: otto-ci-fixer.md  otto-idea-agent.md  otto-implementer.md  otto-planner.md  otto-quality-gate.md  otto-retro.md  otto-review-responder.md  otto-reviewer.md  otto-spec-agent.md
src/ottonate/: __init__.py  agents.py  cli.py  config.py  enrichment.py  github.py  init_engineering.py  mcp_server.py  metrics.py  models.py  pipeline.py  prompts.py  rules.py  scheduler.py  setup.py  traceability.py
src/ottonate/dashboard/: api.py  app.py  views.py
src/ottonate/dashboard/static/: app.css
src/ottonate/dashboard/templates/: attention.html  base.html  metrics.html  pipeline.html
src/ottonate/dashboard/templates/partials/: _board.html  _queue.html  _stats.html
src/ottonate/integrations/: github.py  memory.py
tests/: conftest.py  test_dashboard.py  test_enrichment.py  test_github.py  test_idea_pipeline.py  test_init_engineering.py  test_mcp_server.py  test_metrics.py  test_models.py  test_pipeline.py  test_rules.py  test_scheduler.py  test_setup.py  test_traceability.py
tests/integrations/: test_github.py
